add document obj

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
       <div
         class="d-flex flex-column py-5 align-items-center justify-center gap-5"
       >
-        <img src="./img/white_lamp.png" alt="white-lamp" class="img-fluid" />
-        <button type="button" class="btn btn-success"><h1>ACCENDI</h1></button>
+        <img
+          id="lamp"
+          src="./img/white_lamp.png"
+          alt="white-lamp"
+          class="img-fluid"
+        />
+        <button id="switch" type="button" class="btn btn-success">
+          <h1>ACCENDI</h1>
+        </button>
       </div>
     </div>
     <!-- BOOTSTRAP JS -->
