--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           class="img-fluid"
         />
         <button id="switch" type="button" class="btn btn-success">
-          <h1>ACCENDI</h1>
+          <h1 id="switch-input">ACCENDI</h1>
         </button>
       </div>
     </div>
