add img src in js

--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
       <div
         class="d-flex flex-column py-5 align-items-center justify-center gap-5"
       >
-        <img
-          id="lamp"
-          src="./img/white_lamp.png"
-          alt="white-lamp"
-          class="img-fluid"
-        />
+        <figure id="lamps"></figure>
         <button id="switch" type="button" class="btn btn-success">
           <h1 id="switch-input">ACCENDI</h1>
         </button>
